# HAW-SO1

./: CMakeLists.txt  Test.c
Basics/: 1D_arrays.c  Calculator.c  Test.c
ExamTasks/: LSL_Exam_Task.c  W2022-23.c
Exercises/: AfterLec2.c  AfterLec3.c  AfterLec4.c
Exercises/AfterLec5/: Bisection.c  LeibnizSeries.c
Exercises/Arrays/: Dice.c  EqualArrays.c  MedianFilter.c  MemoryAllocation.c  Strings.c
Exercises/Pointers/: dataTypes.c  fundamentals.c
Hensel_WorkbookC/: AfterLec2.c  AfterLec3.c  AfterLec4.c  AfterLec6.c
Hensel_WorkbookC/AfterLec5/: Dice.c
Hensel_WorkbookC/Arrays/: FindSubstring.c
Hensel_WorkbookC/LabWork/Lab2/: question_14_2.c
Hensel_WorkbookC/LabWork/Lab3/: Distances.c
Hensel_WorkbookC/LabWork/Lab4/: MaximumDistance.c  RouteLength.c
Hensel_WorkbookC/LabWork/Lab5/: SecondAssignment.c
Hensel_WorkbookC/Pointers/: arrays.c  strings.c
LabWork/Lab2/: question_14_2.c
LabWork/Lab3/: Distances.c  Hemispheres.c
LabWork/Lab4/: MaximumDistance.c  RouteLength.c
LabWork/Lab5/: FirstAssignment.c
LectureStuff/: Lec2.c  Lec3.c  Lec4.c
LectureStuff/BitOperations/: TwosComplement.c
LectureStuff/Lec5/: CleanInput.c
LectureStuff/MemoryManagement/: Main.c  MyStrings.c  PolarCoords.c  Scope.c
LectureStuff/Pointers/: MultidimensionalArrays.c  Pointers.c  PointersAndArrays.c
LectureStuff/Structures/: Enums.c  StructArraysAndPointers.c  StructBasics.c
PastExams/: W2023-24.c
PastExams/W2016-17/: 2D_Vectors.c  PrimeNumbers.c
PastExams/W2017-18/: DivisorsAndEuclideanAlgorithm.c
PastExams/W2018-19/: ArrayOperations.c
