cmake_minimum_required(VERSION 3.29)
project(UniWorkC C)

set(CMAKE_C_STANDARD 11)

add_executable(Main main.c)
add_executable(Calculator Basics/Calculator.c)
add_executable(Lec2 LectureStuff/Lec2.c)
add_executable(AfterLec2 Exercises/AfterLec2.c)
add_executable(AfterLec3 Exercises/AfterLec3.c)
add_executable(Lec3 LectureStuff/Lec3.c)
add_executable(Lec4 LectureStuff/Lec4.c)
add_executable(AfterLec4 Exercises/AfterLec4.c)
add_executable(LSL_Exam_Task ExamTasks/LSL_Exam_Task.c)
add_executable(Question_14_2 LabWork/Lab2/question_14_2.c)
add_executable(Dice Exercises/AfterLec5/Dice.c)
add_executable(AfterLec6 Exercises/AfterLec6.c)
add_executable(CleanInput LectureStuff/Lec5/CleanInput.c)
add_executable(LeibnizSeries Exercises/AfterLec5/LeibnizSeries.c)
add_executable(Bisection Exercises/AfterLec5/Bisection.c)
add_executable(Hemispheres LabWork/Lab3/Hemispheres.c)
add_executable(Distances LabWork/Lab3/Distances.c)