cmake_minimum_required(VERSION 3.29)
project(UniWorkC C)

set(CMAKE_C_STANDARD 11)

add_executable(Main main.c)
add_executable(Calculator Basics/Calculator.c)
add_executable(Lec2 LectureStuff/Lec2.c)
add_executable(AfterLec2 Exercises/AfterLec2.c)
add_executable(AfterLec3 Exercises/AfterLec3.c)
add_executable(Lec3 LectureStuff/Lec3.c)
add_executable(Lec4 LectureStuff/Lec4.c)
add_executable(AfterLec4 Exercises/AfterLec4.c)
add_executable(LSL_Exam_Task ExamTasks/LSL_Exam_Task.c)
add_executable(Question_14_2 LabWork/Lab2/question_14_2.c)
add_executable(Dice Exercises/AfterLec5/Dice.c)
add_executable(AfterLec6 Exercises/AfterLec6.c)
add_executable(CleanInput LectureStuff/Lec5/CleanInput.c)
add_executable(LeibnizSeries Exercises/AfterLec5/LeibnizSeries.c)
add_executable(Bisection Exercises/AfterLec5/Bisection.c)
add_executable(Hemispheres LabWork/Lab3/Hemispheres.c)
add_executable(Distances LabWork/Lab3/Distances.c)
add_executable(1D_arrays Basics/1D_arrays.c)
add_executable(ArrayDice Exercises/Arrays/Dice.c)
add_executable(EqualArrays Exercises/Arrays/EqualArrays.c)
add_executable(MedianFilter Exercises/Arrays/MedianFilter.c)
add_executable(Strings Exercises/Arrays/Strings.c)
add_executable(MemoryAllocation Exercises/Arrays/MemoryAllocation.c)
add_executable(FindSubstring Exercises/Arrays/FindSubstring.c)
add_executable(Pointers LectureStuff/Pointers/Pointers.c)
add_executable(RouteLength LabWork/Lab4/RouteLength.c)
add_executable(MaximumDistance LabWork/Lab4/MaximumDistance.c)
add_executable(W2022-23 ExamTasks/W2022-23.c)
add_executable(ArraysPointers LectureStuff/Pointers/PointersAndArrays.c)
add_executable(MultidimensionalArrays LectureStuff/Pointers/MultidimensionalArrays.c)
add_executable(PointersFundamentals Exercises/Pointers/fundamentals.c)
add_executable(PointersDataTypes Exercises/Pointers/dataTypes.c)
add_executable(PointersArrays Exercises/Pointers/arrays.c)
add_executable(PointersStrings Exercises/Pointers/strings.c)
