cmake_minimum_required(VERSION 3.29)
project(UniWorkC C)

set(CMAKE_C_STANDARD 11)

add_executable(Calculator Basics/Calculator.c)
add_executable(Lec2 LectureStuff/Lec2.c)
add_executable(AfterLec2 Hensel_WorkbookC/AfterLec2.c)
add_executable(AfterLec3 Hensel_WorkbookC/AfterLec3.c)
add_executable(Lec3 LectureStuff/Lec3.c)
add_executable(Lec4 LectureStuff/Lec4.c)
add_executable(AfterLec4 Hensel_WorkbookC/AfterLec4.c)
add_executable(LSL_Exam_Task PastExams/LSL_Exam_Task.c)
add_executable(Question_14_2 Hensel_WorkbookC/LabWork/Lab2/question_14_2.c)
add_executable(Dice Hensel_WorkbookC/AfterLec5/Dice.c)
add_executable(AfterLec6 Hensel_WorkbookC/AfterLec6.c)
add_executable(CleanInput LectureStuff/Lec5/CleanInput.c)
add_executable(LeibnizSeries Hensel_WorkbookC/AfterLec5/LeibnizSeries.c)
add_executable(Bisection Hensel_WorkbookC/AfterLec5/Bisection.c)
add_executable(Hemispheres Hensel_WorkbookC/LabWork/Lab3/Hemispheres.c)
add_executable(Distances Hensel_WorkbookC/LabWork/Lab3/Distances.c)
add_executable(1D_arrays Basics/1D_arrays.c)
add_executable(ArrayDice Hensel_WorkbookC/Arrays/Dice.c)
add_executable(EqualArrays Hensel_WorkbookC/Arrays/EqualArrays.c)
add_executable(MedianFilter Hensel_WorkbookC/Arrays/MedianFilter.c)
add_executable(Strings Hensel_WorkbookC/Arrays/Strings.c)
add_executable(MemoryAllocation Hensel_WorkbookC/Arrays/MemoryAllocation.c)
add_executable(FindSubstring Hensel_WorkbookC/Arrays/FindSubstring.c)
add_executable(Pointers LectureStuff/Pointers/Pointers.c)
add_executable(RouteLength Hensel_WorkbookC/LabWork/Lab4/RouteLength.c)
add_executable(MaximumDistance Hensel_WorkbookC/LabWork/Lab4/MaximumDistance.c)
add_executable(W2022-23 PastExams/W2022-23.c)
add_executable(ArraysPointers LectureStuff/Pointers/PointersAndArrays.c)
add_executable(MultidimensionalArrays LectureStuff/Pointers/MultidimensionalArrays.c)
add_executable(PointersFundamentals Hensel_WorkbookC/Pointers/fundamentals.c)
add_executable(PointersDataTypes Hensel_WorkbookC/Pointers/dataTypes.c)
add_executable(PointersArrays Hensel_WorkbookC/Pointers/arrays.c)
add_executable(PointersStrings Hensel_WorkbookC/Pointers/strings.c)
add_executable(Scope LectureStuff/MemoryManagement/Scope.c)
add_executable(PolarCoords LectureStuff/MemoryManagement/PolarCoords.c)
add_executable(Main2 LectureStuff/MemoryManagement/Main.c)
add_executable(MyStrings LectureStuff/MemoryManagement/MyStrings.c)
add_executable(StructBasics LectureStuff/Structures/StructBasics.c)
add_executable(StructArraysAndPointers LectureStuff/Structures/StructArraysAndPointers.c)
add_executable(Enums LectureStuff/Structures/Enums.c)
add_executable(Lab5 Hensel_WorkbookC/LabWork/Lab5/FirstAssignment.c)
add_executable(SecondAssignment Hensel_WorkbookC/LabWork/Lab5/SecondAssignment.c)
add_executable(W2023-24 PastExams/W2023-24.c)
add_executable(Test Test.c)
add_executable(PrimeNumbers PastExams/W2016-17/PrimeNumbers.c)
add_executable(DivisorsAndEuclideanAlgorithm PastExams/W2017-18/DivisorsAndEuclideanAlgorithm.c)
add_executable(ArrayOperations PastExams/W2018-19/ArrayOperations.c)
